# vietnamese-exam-seq-labelling

./: .gitignore  AGENTS.md  DATA_STRUCTURE.md  goal.md  pyproject.toml
dataset_output/: label_mapping.json  test.jsonl  val.jsonl
src/: deepseek_client.py
src/sequence_labelling_data_generator/: cli.py  generator.py  inference.py  parser.py  prepare_dataset.py  reconstructor.py  test_prepare_dataset.py  test_reconstructor.py  train.py  upload_dataset.py  visualize_samples.py
